--- a/.travis.yaml
+++ b/.travis.yaml
@@ -8,6 +8,9 @@ sudo: false
 install:
     - go get -t
 
+script: 
+    - go test ./...
+
 after_success:
     - figlet "Build Successful!" | /usr/games/cowsay -n -e "^^"
 after_failure:
