--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ script:
     - go build .
     - ./test/go-unit-tests.sh
     - ./build.sh linux
+    - ./test/mock/defaults-change.sh
+    - ./test/mock/short-versions.sh
+    - ./test/mock/direct-paths.sh
+    - ./test/mock/expected_ports.sh
     - ./test/docker-test.sh $(cat .build/VERSION)
 
 after_success:
