Code cleanup and formatting
- Improced code by fixing some sylistic issues (to satisfy "go vet") and
  reformatted some recently changed code.
- Moved build script to ./scripts
- Added option to build compressed executables (but defaults is still uncompressed)
- Added ./scripts/sanity_check to verify formatting and code complaint.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ install:
 
 script: 
     - go build .
+    - ./scripts/sanity_check.sh
     - ./test/go-unit-tests.sh
-    - ./build.sh linux
+    - ./scripts/build.sh linux
     - ./test/mock/defaults-change.sh
     - ./test/mock/short-versions.sh
     - ./test/mock/direct-paths.sh
