--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
     - ./test/mock/short-versions.sh
     - ./test/mock/direct-paths.sh
     - ./test/mock/expected_ports.sh
+    - ./test/mock/read-only-replication.sh
     - ./test/docker-test.sh $(cat .build/VERSION)
 
 after_success:
