--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 
 go:
-  - "1.10.x"
+  - "1.11.x"
 
 os: linux
 
@@ -11,15 +11,7 @@ install:
 
 script: 
     - go build .
-    - ./scripts/sanity_check.sh
-    - ./test/go-unit-tests.sh
-    - ./scripts/build.sh linux
-    - ./test/mock/defaults-change.sh
-    - ./test/mock/short-versions.sh
-    - ./test/mock/direct-paths.sh
-    - ./test/mock/expected_ports.sh
-    - ./test/mock/read-only-replication.sh
-    - ./test/docker-test.sh $(cat .build/VERSION)
+    - ./scripts/travis.sh
 
 after_success:
     - echo "Build Successful!"
